fix QR code quiet area in dark mode
It remained white in dark mode, rendering the QR code unusable due to the filter: invert()

--- a/stylesheets/i.css
+++ b/stylesheets/i.css
@@ -129,6 +129,10 @@ li {
         outline: 1px solid rgb(73 83 94);
     }
 
+    .qrcode {
+        background-color: black;
+    }
+
     .qrcode img {
         filter: invert(1);
     }
